// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableCell Style tests should render with condensed styles 1`] = `
.circuit-0 {
  background-color: #FFF;
  border-bottom: 1px solid #E6E6E6;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  white-space: nowrap;
  padding: 12px 16px;
  font-size: 13px;
  line-height: 20px;
}

<td
  class="circuit-0 circuit-1"
  data-testid="table-cell"
>
  Foo
</td>
`;

exports[`TableCell Style tests should render with default styles 1`] = `
.circuit-0 {
  background-color: #FFF;
  border-bottom: 1px solid #E6E6E6;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  white-space: nowrap;
}

<td
  class="circuit-0 circuit-1"
  data-testid="table-cell"
>
  Foo
</td>
`;

exports[`TableCell Style tests should render with header styles 1`] = `
.circuit-0 {
  background-color: #FFF;
  border-bottom: 1px solid #E6E6E6;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  white-space: nowrap;
}

<td
  class="circuit-0 circuit-1"
  data-testid="table-cell"
>
  Foo
</td>
`;

exports[`TableCell Style tests should render with isHovered styles 1`] = `
.circuit-0 {
  background-color: #FFF;
  border-bottom: 1px solid #E6E6E6;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  white-space: nowrap;
  background-color: #FAFBFC;
}

<td
  class="circuit-0 circuit-1"
  data-testid="table-cell"
>
  Foo
</td>
`;
